--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 	</div>
 
 	<script src="js/three/three.min.js" type="text/javascript"></script>
+	<script src="js/three/ColladaLoader.js" type="text/javascript"></script>
 	<script src="js/three/jsm/controls/PointerLockControls.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
