--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 	<script src="js/three/three.min.js" type="text/javascript"></script>
 	<script src="js/three/ColladaLoader.js" type="text/javascript"></script>
 	<script src="js/three/OBJLoader.js" type="text/javascript"></script>
+	<script src="js/three/MTLLoader.js" type="text/javascript"></script>
 	<script src="js/three/jsm/controls/PointerLockControls.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
