--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="icon" type="image/png" size="16" href="./asset/favicon.ico">
-	<title>Image to music</title>
+	<title>Ndang Metu!</title>
 	<style type="text/css">
 		html, body {
 			width: 100%;
